[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/Themes/Styles/stylebox_box.tres" type="StyleBox" id=1]
[ext_resource path="res://UI/Icons/save.png" type="Texture" id=2]
[ext_resource path="res://UI/Themes/general_theme.tres" type="Theme" id=3]
[ext_resource path="res://UI/Icons/plain_star.png" type="Texture" id=4]
[ext_resource path="res://UI/Icons/hourglass.png" type="Texture" id=5]
[ext_resource path="res://UI/title_screen/save_preview/save_preview.gd" type="Script" id=6]
[ext_resource path="res://UI/smart_ui_nodes/smart_button/smart_button.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/Icons/deaths.png" type="Texture" id=8]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="save_preview" type="PanelContainer"]
margin_top = -0.249382
margin_right = 162.0
margin_bottom = 66.2494
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 162, 66 )
focus_mode = 2
size_flags_horizontal = 3
theme = ExtResource( 3 )
custom_styles/panel = ExtResource( 1 )
script = ExtResource( 6 )

[node name="main" type="VBoxContainer" parent="."]
margin_left = 6.0
margin_top = 2.24938
margin_right = 156.0
margin_bottom = 64.2494

[node name="HBoxContainer" type="HBoxContainer" parent="main"]
margin_right = 150.0
margin_bottom = 16.0

[node name="icon" type="TextureRect" parent="main/HBoxContainer"]
margin_right = 16.0
margin_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 2 )
stretch_mode = 3

[node name="name" type="Label" parent="main/HBoxContainer"]
margin_left = 20.0
margin_right = 103.0
margin_bottom = 16.0
text = "untitled_save"

[node name="space" type="Panel" parent="main/HBoxContainer"]
margin_left = 107.0
margin_right = 122.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="version" type="Label" parent="main/HBoxContainer"]
margin_left = 126.0
margin_right = 150.0
margin_bottom = 16.0
custom_colors/font_color = Color( 0.423529, 0.937255, 0.160784, 1 )
text = "v0.0"
align = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="main"]
margin_top = 20.0
margin_right = 150.0
margin_bottom = 36.0

[node name="stars_icon" type="TextureRect" parent="main/HBoxContainer2"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 4 )

[node name="stars" type="Label" parent="main/HBoxContainer2"]
margin_left = 20.0
margin_right = 34.0
margin_bottom = 16.0
text = "60"

[node name="VSeparator" type="VSeparator" parent="main/HBoxContainer2"]
margin_left = 38.0
margin_right = 38.0
margin_bottom = 16.0
custom_constants/separation = 0

[node name="deaths_icon" type="TextureRect" parent="main/HBoxContainer2"]
margin_left = 42.0
margin_right = 57.0
margin_bottom = 16.0
texture = ExtResource( 8 )

[node name="deaths" type="Label" parent="main/HBoxContainer2"]
margin_left = 61.0
margin_right = 82.0
margin_bottom = 16.0
text = "333"

[node name="VSeparator_2" type="VSeparator" parent="main/HBoxContainer2"]
margin_left = 86.0
margin_right = 86.0
margin_bottom = 16.0
custom_constants/separation = 0

[node name="time_icon" type="TextureRect" parent="main/HBoxContainer2"]
margin_left = 90.0
margin_right = 105.0
margin_bottom = 16.0
texture = ExtResource( 5 )

[node name="time" type="Label" parent="main/HBoxContainer2"]
margin_left = 109.0
margin_right = 150.0
margin_bottom = 16.0
text = "2:22:22"

[node name="HBoxContainer3" type="HBoxContainer" parent="main"]
margin_top = 40.0
margin_right = 150.0
margin_bottom = 62.0

[node name="play" parent="main/HBoxContainer3" instance=ExtResource( 7 )]
margin_right = 36.0
margin_bottom = 22.0
focus_neighbour_right = NodePath("../delete")
text = "play"
flat = true

[node name="space" type="Panel" parent="main/HBoxContainer3"]
margin_left = 40.0
margin_right = 96.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="delete" parent="main/HBoxContainer3" instance=ExtResource( 7 )]
margin_left = 100.0
margin_right = 150.0
margin_bottom = 22.0
focus_neighbour_left = NodePath("../play")
text = "delete"
flat = true
selected_color = Color( 0.972549, 0.101961, 0.101961, 1 )

[node name="delete_confirmation" type="VBoxContainer" parent="."]
visible = false
margin_left = 6.0
margin_top = 2.24938
margin_right = 179.0
margin_bottom = 64.2494
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
size_flags_horizontal = 5
alignment = 1

[node name="Label" type="Label" parent="delete_confirmation"]
margin_top = 10.0
margin_right = 173.0
margin_bottom = 26.0
text = "are you sure?
no undo"
align = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="delete_confirmation"]
margin_top = 30.0
margin_right = 173.0
margin_bottom = 52.0
focus_mode = 2

[node name="final_delete" parent="delete_confirmation/HBoxContainer" instance=ExtResource( 7 )]
margin_right = 50.0
margin_bottom = 22.0
text = "delete"
flat = true
selected_color = Color( 0.972549, 0.101961, 0.101961, 1 )

[node name="space" type="Panel" parent="delete_confirmation/HBoxContainer"]
margin_left = 54.0
margin_right = 119.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="cancel" parent="delete_confirmation/HBoxContainer" instance=ExtResource( 7 )]
margin_left = 123.0
margin_right = 173.0
margin_bottom = 22.0
text = "cancel"
flat = true

[connection signal="focus_entered" from="." to="." method="_on_save_preview_focus_entered"]
[connection signal="pressed" from="main/HBoxContainer3/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="main/HBoxContainer3/delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="delete_confirmation/HBoxContainer/final_delete" to="." method="_on_final_delete_pressed"]
[connection signal="pressed" from="delete_confirmation/HBoxContainer/cancel" to="." method="_on_cancel_pressed"]
